Fixed the scrollbar for firefox

--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,8 @@
 
     --clr-transparent: #DFDFDF40;
 
-    scrollbar-width: 10px;
-    scrollbar-track-color: var(--clr-main-dark);
-    scrollbar-color: #888 #555;
-
+    scrollbar-color: var(--clr-main-dark) #555;
+    
     --max-width: 1920px;
 }
 
